# dl-workinggroup

./: README.md  pyproject.toml  setup.sh  test_setup.py
notebooks/: 1. Play with tensors.ipynb  2. Naked Tensors - Linear Clf [COMPLETE].ipynb  2. Naked Tensors - Linear Clf.ipynb  3. Introducing some structure [COMPLETE].ipynb  3. Introducing some structure copy.ipynb  3. Introducing some structure.ipynb  4.1 Fitting Moons.ipynb  4.1 Modeling Capacity [COMPLETE].ipynb  4.1 Modeling Capacity.ipynb  4.2 Classification.ipynb  4.3 Classification IRL.ipynb  4.? Fitting Moons.ipynb  4.x Revision [COMPLETE].ipynb  4.x Revision.ipynb  5.0 Composition [COMPLETE].ipynb  5.0 Composition.ipynb  5.0 The Sigmoid.ipynb  5.1 Classification IRL.ipynb  5.1 Classification [COMPLETE].ipynb  5.1 Classification.ipynb  5.1 Sigmoid Classification.ipynb  5.2 Classification IRL [COMPLETE].ipynb  5.2 Classification IRL.ipynb  5.2 MNIST.ipynb  5.2.1 BCE vs MSE.ipynb  5.3 Images [COMPLETED].ipynb  5.3 Images.ipynb  5.3 MNIST.ipynb  6.1 One-Hot Sentiment Analysis .ipynb  6.1 One-Hot Sentiment Analysis [COMPLETED].ipynb  6.1 One-Hot Sentiment Analysis.ipynb  6.1 Word Representations [COMPLETED].ipynb  6.1 Word Representations.ipynb  6.1.1 Exploring W2V.ipynb  6.1.2 Actual Training.ipynb  6.1.2 Model & Training [COMPLETED].ipynb  6.1.2 Model & Training.ipynb  6.1.2 Training W2V [COMPLETED].ipynb  6.1.2 Training W2V.ipynb  6.2 Co-Occurance Mumbo Jumbo.ipynb  (+12 more)
resources/: preparing_for_6.2.sh
session1/: 1. Play with tensors.ipynb  2. Naked Tensors - Linear Clf.ipynb  2. Naked Tensors - Linear Clf.py  (+2 more)
